MB-35753 Update project.cli to the latest version of each libs we use
Change-Id: I404ccc26dddf01865ff47d7796c76f21c16516f1
Reviewed-on: http://review.couchbase.org/114056
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: James Harrison <james.harrison@couchbase.com>
Reviewed-by: Sven Signer <sven.signer@couchbase.com>